--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </a>
 
             <!-- 3. 题库管理 (管理员) -->
-            <a href="question_bank.html" class="group relative block">
+            <a href="question.html" class="group relative block">
                 <div class="glass-card h-80 rounded-2xl p-8 flex flex-col items-center justify-center text-center shadow-lg hover:shadow-2xl hover:scale-105 transition-all duration-300 border-t-4 border-slate-500">
                     <div class="w-20 h-20 bg-slate-100 rounded-full flex items-center justify-center mb-6 group-hover:bg-slate-700 transition-colors duration-300">
                         <i class="fa-solid fa-database text-3xl text-slate-600 group-hover:text-white transition-colors"></i>
@@ -89,4 +89,5 @@
 
 </body>
 </html>
+
 
