--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8 w-full max-w-5xl">
 
             <!-- 1. 学生入口 (强调) -->
-            <a href="admin.html" class="group relative block">
+            <a href="student.html" class="group relative block">
                 <div class="glass-card h-80 rounded-2xl p-8 flex flex-col items-center justify-center text-center shadow-lg hover:shadow-2xl hover:scale-105 transition-all duration-300 border-t-4 border-blue-500">
                     <div class="w-20 h-20 bg-blue-50 rounded-full flex items-center justify-center mb-6 group-hover:bg-blue-600 transition-colors duration-300">
                         <i class="fa-solid fa-user-graduate text-3xl text-blue-600 group-hover:text-white transition-colors"></i>
@@ -89,6 +89,7 @@
 
 </body>
 </html>
+
 
 
 
