--- a/question.html
+++ b/question.html
@@ -35,6 +35,7 @@
     <!-- 2. 顶部导航 -->
     <header class="bg-white border-b border-slate-200 p-4 shrink-0 flex justify-between items-center shadow-sm z-10">
         <div class="flex items-center gap-3">
+            <a href="index.html" class="text-slate-400 hover:text-blue-600 transition-colors mr-2" title="返回首页"><i class="fa-solid fa-house"></i></a>
             <div class="bg-blue-600 text-white p-2 rounded-lg">
                 <i class="fa-solid fa-layer-group"></i>
             </div>
@@ -105,7 +106,7 @@
         import { getAuth, signInAnonymously, signInWithCustomToken, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
         import { getFirestore, collection, addDoc, deleteDoc, doc, onSnapshot, query, orderBy, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
-        // --- 关键修改：立即初始化 App 和 DB，防止 undefined 错误 ---
+        // --- 立即初始化 App 和 DB ---
         const firebaseConfig = JSON.parse(__firebase_config || '{}');
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
@@ -178,7 +179,6 @@
 
         // 4. 新增题目
         window.addQuestion = async () => {
-            // 安全检查：防止在 DB 未连接时调用
             if (!db) {
                 alert("数据库尚未初始化，请刷新页面。");
                 return;
