--- a/student.html
+++ b/student.html
@@ -168,7 +168,7 @@
         // --- 初始化 (并发执行，防止 IP 阻塞 Firebase) ---
         async function init() {
             // 设置 API Key
-            state.apiKey = ""; // 默认为空，等待环境注入
+            state.apiKey = "AIzaSyDnI8ptuZlh6vcW3WSRtMywSsCea9ywuHE"; // 默认为空，等待环境注入
             
             // 1. 启动 IP 检测 (后台运行，设置超时)
             detectIP();
@@ -460,3 +460,4 @@
     </script>
 </body>
 </html>
+
