--- a/admin.html
+++ b/admin.html
@@ -180,14 +180,15 @@
         // ==========================================
         // 🚨 必须在此处填入您的配置信息 (GitHub Pages 专用)
         // ==========================================
-        const FIREBASE_CONFIG = {
-            apiKey: "AIzaSyCjzR_Idy9h7AWHLRxz_bzt77i3iCInrU8",
-            authDomain: "ai-and-education-47d62.firebaseapp.com",
-            projectId: "ai-and-education-47d62",
-            storageBucket: "ai-and-education-47d62.firebasestorage.app",
-            messagingSenderId: "983382295554",
-            appId: "1:983382295554:web:f65048ae253b284816131b",
-            measurementId: "G-Z8S8D9YN6D"
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+          apiKey: "AIzaSyCjzR_Idy9h7AWHLRxz_bzt77i3iCInrU8",
+          authDomain: "ai-and-education-47d62.firebaseapp.com",
+          projectId: "ai-and-education-47d62",
+          storageBucket: "ai-and-education-47d62.firebasestorage.app",
+          messagingSenderId: "983382295554",
+          appId: "1:983382295554:web:f65048ae253b284816131b",
+          measurementId: "G-Z8S8D9YN6D"
         };
         // ==========================================
 
@@ -360,3 +361,4 @@
     </script>
 </body>
 </html>
+
