--- a/student.html
+++ b/student.html
@@ -145,15 +145,15 @@
         // ==========================================
         // 🚨 必须在此处填入您的配置信息 (GitHub Pages 专用)
         // ==========================================
- // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebaseConfig = {
-          apiKey: "AIzaSyCjzR_Idy9h7AWHLRxz_bzt77i3iCInrU8",
-          authDomain: "ai-and-education-47d62.firebaseapp.com",
-          projectId: "ai-and-education-47d62",
-          storageBucket: "ai-and-education-47d62.firebasestorage.app",
-          messagingSenderId: "983382295554",
-          appId: "1:983382295554:web:f65048ae253b284816131b",
-          measurementId: "G-Z8S8D9YN6D"
+        const FIREBASE_CONFIG = {
+            // 请在 Firebase 控制台 -> 项目设置 -> 常规 -> 下方 "您的应用" 中复制配置对象
+             apiKey: "AIzaSyCjzR_Idy9h7AWHLRxz_bzt77i3iCInrU8",
+             authDomain: "ai-and-education-47d62.firebaseapp.com",
+             projectId: "ai-and-education-47d62",
+             storageBucket: "ai-and-education-47d62.firebasestorage.app",
+             messagingSenderId: "983382295554",
+             appId: "1:983382295554:web:f65048ae253b284816131b",
+             measurementId: "G-Z8S8D9YN6D"
         };
 
         const GEMINI_API_KEY = "AIzaSyDnI8ptuZlh6vcW3WSRtMywSsCea9ywuHE"; // 请填入您的 Gemini API Key
@@ -445,4 +445,3 @@
     </script>
 </body>
 </html>
-
