--- a/student.html
+++ b/student.html
@@ -169,9 +169,9 @@
                 <p>亲爱的同学：欢迎参与本项研究。</p>
                 <div class="bg-slate-50 p-3 rounded-lg border border-slate-100">
                     <ul class="list-disc pl-4 space-y-1">
-                        <li><strong>数据收集：</strong> 记录答题内容、时间及 AI 交互日志。</li>
-                        <li><strong>隐私保护：</strong> 数据去敏处理，仅用于科研。</li>
-                        <li><strong>学术诚信：</strong> 请按真实习惯使用。</li>
+                        <li><strong>数据收集：</strong> 系统将记录您的答题内容、答题用时，以及您与 AI 助手的所有交互数据（包括提问内容、AI 回复、复制/粘贴操作等）。</li>
+                        <li><strong>隐私保护：</strong> 收集的数据仅用于学术研究与教学分析。我们将严格保密，数据在处理和发表时将进行去敏化处理，不会泄露您的个人身份信息。</li>
+                        <li><strong>学术诚信：</strong> 请按照您真实的学习习惯使用 AI 辅助，系统记录旨在还原真实的学习过程。</li>
                     </ul>
                 </div>
                 <p>点击“确认”即表示同意授权。</p>
@@ -568,3 +568,4 @@
     </script>
 </body>
 </html>
+
