--- a/index.html
+++ b/index.html
@@ -3,93 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI 辅助学习研究平台 - 首页</title>
+    <title>在线答题犹豫行为研究平台 | Research Portal</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
-        .animate-float { animation: float 6s ease-in-out infinite; }
-        @keyframes float { 0% { transform: translateY(0px); } 50% { transform: translateY(-20px); } 100% { transform: translateY(0px); } }
-        .glass-card {
-            background: rgba(255, 255, 255, 0.9);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.5);
+        /* 渐变背景动画 */
+       .gradient-bg {
+            background: linear-gradient(-45deg, #1e293b, #0f172a, #334155, #1e293b);
+            background-size: 400% 400%;
+            animation: gradient 15s ease infinite;
+        }
+        @keyframes gradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+        
+       .card-hover {
+            transition: all 0.3s ease;
+        }
+       .card-hover:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
         }
     </style>
 </head>
-<body class="bg-gradient-to-br from-slate-50 to-blue-50 text-slate-800 font-sans h-screen overflow-hidden relative">
+<body class="gradient-bg min-h-screen text-slate-100 font-sans flex flex-col items-center justify-center p-4">
 
-    <!-- 背景装饰元素 -->
-    <div class="absolute top-[-10%] left-[-10%] w-96 h-96 bg-blue-200 rounded-full mix-blend-multiply filter blur-3xl opacity-30 animate-float"></div>
-    <div class="absolute bottom-[-10%] right-[-10%] w-96 h-96 bg-purple-200 rounded-full mix-blend-multiply filter blur-3xl opacity-30 animate-float" style="animation-delay: 2s"></div>
+    <header class="text-center mb-12 animate-fade-in-down">
+        <div class="inline-flex items-center justify-center w-16 h-16 rounded-full bg-blue-600/20 mb-4 border border-blue-500/30 backdrop-blur-sm">
+            <i class="fa-solid fa-microscope text-3xl text-blue-400"></i>
+        </div>
+        <h1 class="text-4xl md:text-5xl font-bold tracking-tight mb-2 text-white">犹豫行为与认知交互</h1>
+        <p class="text-lg text-slate-400 font-light">Online Hesitation Behavior Research Platform</p>
+        <div class="mt-4 inline-block px-3 py-1 rounded-full bg-slate-800/50 border border-slate-700 text-xs text-slate-500">
+            v2.1.0 Experimental Build
+        </div>
+    </header>
 
-    <!-- 主容器 -->
-    <div class="relative z-10 h-full flex flex-col items-center justify-center p-6">
+    <main class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl w-full">
         
-        <!-- 标题头 -->
-        <div class="text-center mb-12">
-            <div class="inline-block p-3 bg-white rounded-2xl shadow-sm mb-4">
-                <i class="fa-solid fa-graduation-cap text-4xl text-blue-600"></i>
+        <a href="student.html" class="card-hover group relative block bg-white/5 backdrop-blur-md rounded-2xl border border-white/10 p-8 overflow-hidden hover:border-blue-500/50 hover:bg-white/10">
+            <div class="absolute top-0 right-0 p-4 opacity-10 group-hover:opacity-20 transition-opacity">
+                <i class="fa-solid fa-brain text-9xl"></i>
             </div>
-            <h1 class="text-4xl font-bold text-slate-800 mb-2 tracking-tight">AI 辅助学习行为研究平台</h1>
-            <p class="text-slate-500 text-lg">Education & AI Interaction Research Lab</p>
-        </div>
-
-        <!-- 导航卡片组 -->
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 w-full max-w-5xl">
-
-            <!-- 1. 学生入口 (强调) -->
-            <a href="student.html" class="group relative block">
-                <div class="glass-card h-80 rounded-2xl p-8 flex flex-col items-center justify-center text-center shadow-lg hover:shadow-2xl hover:scale-105 transition-all duration-300 border-t-4 border-blue-500">
-                    <div class="w-20 h-20 bg-blue-50 rounded-full flex items-center justify-center mb-6 group-hover:bg-blue-600 transition-colors duration-300">
-                        <i class="fa-solid fa-user-graduate text-3xl text-blue-600 group-hover:text-white transition-colors"></i>
-                    </div>
-                    <h2 class="text-2xl font-bold text-slate-800 mb-2">我是学生</h2>
-                    <p class="text-slate-500 mb-6 px-4">进入答题页面，完成随机抽取的练习题并与 AI 助手互动。</p>
-                    <span class="inline-block px-6 py-2 bg-blue-600 text-white rounded-full font-bold shadow-md group-hover:shadow-lg transition-all">
-                        开始答题 <i class="fa-solid fa-arrow-right ml-2"></i>
-                    </span>
+            <div class="relative z-10">
+                <div class="w-12 h-12 bg-blue-500 rounded-lg flex items-center justify-center mb-6 shadow-lg shadow-blue-500/30">
+                    <i class="fa-solid fa-user-graduate text-white text-xl"></i>
                 </div>
-            </a>
-
-            <!-- 2. 数据后台 (管理员) -->
-            <a href="admin.html" class="group relative block">
-                <div class="glass-card h-80 rounded-2xl p-8 flex flex-col items-center justify-center text-center shadow-lg hover:shadow-2xl hover:scale-105 transition-all duration-300 border-t-4 border-purple-500">
-                    <div class="w-20 h-20 bg-purple-50 rounded-full flex items-center justify-center mb-6 group-hover:bg-purple-600 transition-colors duration-300">
-                        <i class="fa-solid fa-chart-pie text-3xl text-purple-600 group-hover:text-white transition-colors"></i>
-                    </div>
-                    <h2 class="text-2xl font-bold text-slate-800 mb-2">数据中心</h2>
-                    <p class="text-slate-500 mb-6 px-4">研究人员入口。查看实时交互数据流、统计图表及学生详情。</p>
-                    <span class="inline-block px-6 py-2 bg-white text-purple-600 border border-purple-200 rounded-full font-bold shadow-sm group-hover:bg-purple-50 transition-all">
-                        <i class="fa-solid fa-lock mr-2"></i> 查看后台
-                    </span>
+                <h2 class="text-2xl font-bold text-white mb-2">认知评估入口</h2>
+                <p class="text-slate-400 text-sm mb-6 leading-relaxed">
+                    面向受试者的答题界面。集成高频鼠标轨迹追踪与犹豫行为数据采集系统。
+                </p>
+                <div class="flex items-center text-blue-400 text-sm font-semibold group-hover:translate-x-2 transition-transform">
+                    进入测试 <i class="fa-solid fa-arrow-right ml-2"></i>
                 </div>
-            </a>
+            </div>
+        </a>
 
-            <!-- 3. 题库管理 (管理员) -->
-            <a href="question.html" class="group relative block">
-                <div class="glass-card h-80 rounded-2xl p-8 flex flex-col items-center justify-center text-center shadow-lg hover:shadow-2xl hover:scale-105 transition-all duration-300 border-t-4 border-slate-500">
-                    <div class="w-20 h-20 bg-slate-100 rounded-full flex items-center justify-center mb-6 group-hover:bg-slate-700 transition-colors duration-300">
-                        <i class="fa-solid fa-database text-3xl text-slate-600 group-hover:text-white transition-colors"></i>
-                    </div>
-                    <h2 class="text-2xl font-bold text-slate-800 mb-2">题库管理</h2>
-                    <p class="text-slate-500 mb-6 px-4">录入新题目、编辑或删除现有题目，管理考试内容池。</p>
-                    <span class="inline-block px-6 py-2 bg-white text-slate-600 border border-slate-200 rounded-full font-bold shadow-sm group-hover:bg-slate-50 transition-all">
-                        <i class="fa-solid fa-gear mr-2"></i> 管理配置
-                    </span>
+        <a href="admin.html" class="card-hover group relative block bg-white/5 backdrop-blur-md rounded-2xl border border-white/10 p-8 overflow-hidden hover:border-emerald-500/50 hover:bg-white/10">
+            <div class="absolute top-0 right-0 p-4 opacity-10 group-hover:opacity-20 transition-opacity">
+                <i class="fa-solid fa-chart-network text-9xl"></i>
+            </div>
+            <div class="relative z-10">
+                <div class="w-12 h-12 bg-emerald-600 rounded-lg flex items-center justify-center mb-6 shadow-lg shadow-emerald-600/30">
+                    <i class="fa-solid fa-shield-halved text-white text-xl"></i>
                 </div>
-            </a>
+                <h2 class="text-2xl font-bold text-white mb-2">研究员控制台</h2>
+                <p class="text-slate-400 text-sm mb-6 leading-relaxed">
+                    面向研究人员的后台。包含心理测量学题库管理、实时监考及耶克斯-多德森定律验证分析。
+                </p>
+                <div class="flex items-center text-emerald-400 text-sm font-semibold group-hover:translate-x-2 transition-transform">
+                    管理数据 <i class="fa-solid fa-lock ml-2 text-xs opacity-70"></i>
+                </div>
+            </div>
+        </a>
 
-        </div>
+    </main>
 
-        <!-- 底部版权 -->
-        <div class="mt-12 text-slate-400 text-sm">
-            &copy; 2025 AI Interaction Research Project. System Status: <span class="text-green-500 font-bold">● Online</span>
-        </div>
-    </div>
+    <footer class="mt-16 text-center text-slate-600 text-xs">
+        <p>&copy; 2025 Cognitive Science Lab. Data collection conforms to IRB standards.</p>
+    </footer>
 
 </body>
 </html>
-
-
-
-
