--- a/student.html
+++ b/student.html
@@ -190,6 +190,29 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
         import { getAuth, signInAnonymously } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
         import { getFirestore, collection, query, orderBy, getDocs, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+    <script type="module">
+    // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+            apiKey: "AIzaSyCsc75cgtVOCBI_GjVh-l8RsrhOcCIkNqw",
+            authDomain: "hesitation-research.firebaseapp.com",
+            projectId: "hesitation-research",
+            storageBucket: "hesitation-research.firebasestorage.app",
+            messagingSenderId: "633469376688",
+            appId: "1:633469376688:web:dc26878c070a05a35b4375",
+            measurementId: "G-ZNZ14Q5R98"
+        };
+
+    // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
 
         // 全局状态管理
         const state = {
@@ -474,3 +497,4 @@
     </script>
 </body>
 </html>
+
