--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="w-16 h-16 bg-blue-50 rounded-full flex items-center justify-center mb-6 group-hover:bg-blue-600 transition-colors duration-300">
                         <i class="fa-solid fa-user-graduate text-2xl text-blue-600 group-hover:text-white transition-colors"></i>
                     </div>
-                    <h2 class="text-2xl font-bold text-slate-800 mb-2">学生 / 被试者</h2>
+                    <h2 class="text-2xl font-bold text-slate-800 mb-2">学生</h2>
                     <p class="text-slate-500 mb-6">参加在线认知评估，系统将自动记录答题行为。</p>
                     <span class="inline-flex items-center text-blue-600 font-bold group-hover:underline">
                         开始答题 <i class="fa-solid fa-arrow-right ml-2"></i>
@@ -47,30 +47,16 @@
             <!-- 研究员入口 -->
             <div class="grid grid-rows-2 gap-4 h-72">
                 <!-- 题库录入 -->
-                <a href="admin.html?tab=questions" class="group relative block h-full transform hover:-translate-y-1 transition-all duration-300">
-                    <div class="glass-card h-full rounded-3xl p-6 flex items-center shadow-md hover:shadow-xl border-l-4 border-slate-500">
-                        <div class="w-12 h-12 bg-slate-100 rounded-full flex items-center justify-center mr-4 shrink-0">
+                <a href="admin.html" class="group relative block h-full transform hover:-translate-y-1 transition-all duration-300">
+                    <div class="glass-card h-72 rounded-3xl p-6 flex items-center shadow-md hover:shadow-xl border-l-4 border-slate-500">
+                        <div class="w-16 h-16 bg-slate-100 rounded-full flex items-center justify-center mr-4 shrink-0">
                             <i class="fa-solid fa-pen-to-square text-slate-600"></i>
                         </div>
                         <div class="text-left">
-                            <h3 class="font-bold text-slate-800 text-lg">题库管理</h3>
-                            <p class="text-sm text-slate-500">录入试题与设置参数</p>
+                            <h3 class="font-bold text-slate-800 text-lg">数据管理</h3>
+                            <p class="text-sm text-slate-500">设计及数据分析>sh>
                         </div>
                         <div class="ml-auto text-slate-300 group-hover:text-slate-600"><i class="fa-solid fa-chevron-right"></i></div>
-                    </div>
-                </a>
-
-                <!-- 数据分析 -->
-                <a href="admin.html?tab=analytics" class="group relative block h-full transform hover:-translate-y-1 transition-all duration-300">
-                    <div class="glass-card h-full rounded-3xl p-6 flex items-center shadow-md hover:shadow-xl border-l-4 border-purple-500">
-                        <div class="w-12 h-12 bg-purple-50 rounded-full flex items-center justify-center mr-4 shrink-0">
-                            <i class="fa-solid fa-chart-pie text-purple-600"></i>
-                        </div>
-                        <div class="text-left">
-                            <h3 class="font-bold text-slate-800 text-lg">数据分析</h3>
-                            <p class="text-sm text-slate-500">查看犹豫行为与图表</p>
-                        </div>
-                        <div class="ml-auto text-slate-300 group-hover:text-purple-600"><i class="fa-solid fa-chevron-right"></i></div>
                     </div>
                 </a>
             </div>
@@ -83,3 +69,4 @@
     </div>
 </body>
 </html>
+
