--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </div>
                         <div class="text-left">
                             <h3 class="font-bold text-slate-800 text-lg">数据管理</h3>
-                            <p class="text-sm text-slate-500">设计及数据分析>sh>
+                            <p class="text-sm text-slate-500">设计及数据分析。</p>
                         </div>
                         <div class="ml-auto text-slate-300 group-hover:text-slate-600"><i class="fa-solid fa-chevron-right"></i></div>
                     </div>
@@ -69,4 +69,5 @@
     </div>
 </body>
 </html>
+
 
