--- a/admin.html
+++ b/admin.html
@@ -140,6 +140,7 @@
                                     <option value="Analyze">Analyze</option>
                                     <option value="Understand">Understand</option>
                                     <option value="Evaluate">Evaluate</option>
+                                    <option value="Remenber">Remenber</option>
                                 </select>
                             </div>
                         </div>
@@ -334,3 +335,4 @@
     </script>
 </body>
 </html>
+
