--- a/admin.html
+++ b/admin.html
@@ -563,7 +563,7 @@
 
         // Helper: Get Ref
         function getCollectionRef(name) {
-            return collection(db, 'artifacts', appId, 'public', 'data', name);
+            return collection(db, name);
         }
 
         // =========================================================================================
@@ -1039,3 +1039,4 @@
     </script>
 </body>
 </html>
+
